# tg_bot_template

./: .env.template  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
tg_bot/: config.py  main.py
tg_bot/filters/: __init__.py  admin.py
tg_bot/handlers/: __init__.py  unprocessed_messages.py
tg_bot/handlers/admin/: __init__.py
tg_bot/handlers/admin/admin/: admin.py
tg_bot/handlers/user/: __init__.py
tg_bot/handlers/user/start/: __init__.py  start.py
tg_bot/middlewares/: __init__.py  config.py  storage.py
tg_bot/services/: __init__.py  set_bot_commands.py  set_bot_description.py
tg_bot/states/: __init__.py  simple.py
